# rock

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DOCS.md  README.md  example_gamemode.lua
core/: Cargo.toml  DOCS.md
core/src/: api.rs  cli.rs  clients.rs  config.rs  main.rs  player_pool.rs  runtime.rs  rx.rs  socket.rs  watcher.rs
core/src/clients/: farcaster.rs
core/src/runtime/: app_data.rs  default_client_api.rs  network_replicator.rs  protocol.rs
core/src/runtime/network_replicator/: field_registry.rs
core/src/runtime/plugins/: farcaster.rs  memory.rs  mod.rs  protocol.rs
core/src/runtime/plugins/farcaster/: rx.rs
core/src/rx/: core.rs
core/src/rx/sync/: entity.rs  spatial.rs
core/src/socket/: adapter.rs  auth.rs  session_registry.rs
core/src/socket/session_registry/: protocol.rs  registrar.rs  sender.rs
examples/: freeroam.lua
migrations/: 0001_init.sql
shared/: Cargo.toml
shared/src/: components.rs  farcaster.rs  lib.rs
src/: actor.rs  api.rs  async_executor.rs  cli.rs  client_protocol.rs  clients.rs  config.rs  crypto.rs  envelope.rs  gamemode.rs  main.rs  meta_db.rs  player_pool.rs  router.rs  runtime.rs  rx.rs  socket.rs  utils.rs  watcher.rs  world.rs
src/actor/: client_message.rs  gamemode.rs  indexer.rs  mod.rs  types.rs  world.rs  ws.rs  ws_client_message.rs
src/actor/gamemode/: default_event_listener.rs  protocol.rs  types.rs
src/actor/indexer/: protocol.rs
src/actor/world/: state.rs
src/actor/ws/: client_message.rs  server_message.rs
src/clients/: farcaster.rs
src/gamemode/: api.rs  app_data.rs  default_event_listener.rs  protocol.rs  scheduler.rs  utils.rs
src/gamemode/api/: memory.rs  plugins.rs  protocol.rs  scene.rs  scheduler.rs  when.rs
src/gamemode/api/plugins/: memory.rs  scene.rs  when.rs
src/gamemode/lua/: stdlib.lua
src/meta_db/: json.rs
src/router/: broadcast.rs  protocol.rs  ws.rs  ws_broadcast.rs
src/runtime/: api.rs  app_data.rs  default_client_api.rs  event_bus.rs  geode.rs  mod.rs  network_replicator.rs  protocol.rs  runtime.rs  script.rs  timer_manager.rs  utils.rs
src/runtime/api/: plugins.rs  protocol.rs  scheduler.rs
src/runtime/api/plugins/: entity.rs  input.rs  layer.rs  memory.rs  on.rs  player.rs  scene.rs  timer.rs
src/runtime/network_replicator/: field_registry.rs  protocol.rs
src/runtime/plugins/: constants.rs  entity.rs  farcaster.rs  input.rs  json.rs  layer.rs  memory.rs  mod.rs  on.rs  player.rs  protocol.rs  rock.rs  room.rs  scene.rs  timer.rs
src/runtime/plugins/entity/: blueprint.rs  components.rs  event_descriptors.rs  handle.rs  macros.rs  rx.rs
src/runtime/plugins/farcaster/: protocol.rs  rx.rs
src/runtime/plugins/input/: protocol.rs  rx.rs
src/runtime/plugins/layer/: handle.rs  rx.rs
src/runtime/plugins/memory/: rx.rs
src/runtime/plugins/on/: event_descriptors.rs  handle.rs  protocol.rs  rx.rs
src/runtime/plugins/player/: broadcast_rx.rs  handle.rs  presence.rs  room.rs  rx.rs  snapshot.rs  vision.rs
src/runtime/plugins/scene/: ctx.rs  manager.rs  protocol.rs  rx.rs
src/runtime/plugins/timer/: handle.rs  rx.rs
src/rx/: core.rs  cursor.rs  operator.rs  signal.rs  sync.rs
src/rx/sync/: entity.rs  handle.rs  routing.rs  spatial.rs
src/rx/sync/spatial/: radius.rs
src/socket/: adapter.rs  auth.rs  protocol.rs  session_registry.rs
src/socket/auth/: farcaster.rs  protocol.rs  ticket.rs
src/socket/session_registry/: protocol.rs  registrar.rs  sender.rs
src/state/: player.rs
src/world/: natives.rs  protocol.rs  state.rs
src/world/state/: player.rs
(+76 files in other folders)
