[package]
name = "rock-engine"
version = "0.1.3"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8.7", features = ["ws"] } 
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
color-eyre = "0.6.5"
futures-util = { version = "0.3.31", features = ["sink"] }
async-trait = "0.1.89"
arc-swap = "1.8.0"
dashmap = "6.1.0"
parking_lot = "0.12.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "json", "chrono", "macros", "uuid"] }
flume = "0.12.0"
mlua = { version = "0.11.5", features = ["lua54", "vendored", "async", "serde"] }
slotmap = "1.1.1"
strum = { version = "0.27", features = ["derive"] }
hecs = "0.11.0"
clap = { version = "4.5.5", features = ["derive"] }
walkdir = "2"
rayon = "1.11.0"
num_enum = "0.7.5"
smallvec = "1.15.1"
