[package]
name = "rock"
description = "ROCK server runtime"
authors = ["Luther Blissett"]
version = "0.2.12"
edition = "2024"

[dependencies]
# rock-wire = { git = "https://github.com/sunsetlover36/rock-wire", tag = "v0.1.3" }
rock-wire = { path = "../rock-wire" }
axum = { version = "0.8.7", features = ["ws", "query"] } 
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.20"
color-eyre = "0.6.5"
futures-util = { version = "0.3.31", features = ["sink"] }
async-trait = "0.1.89"
arc-swap = "1.8.0"
dashmap = "6.1.0"
parking_lot = "0.12.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "json", "chrono", "macros", "uuid"] }
flume = "0.12.0"
mlua = { version = "0.11.5", features = ["lua54", "vendored", "async", "serde"] }
slotmap = "1.1.1"
strum = { version = "0.27", features = ["derive"] }
hecs = "0.11.0"
clap = { version = "4.5.5", features = ["derive"] }
walkdir = "2"
rayon = "1.11.0"
num_enum = "0.7.5"
smallvec = "1.15.1"
cron = "0.15.0"
chrono = "0.4.44"
ahash = "0.8.12"
nanoid = "0.4.0"
thiserror = "2.0.18"
rustc-hash = "2.1.1"
notify-debouncer-full = "0.7.0"
reqwest = { version = "0.13", features = ["json", "query"] }
tower-http = { version = "0.6", features = ["fs"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
toml = "0.9.8"
alloy = { version = "2.0.4", features = ["signer-local", "signer-mnemonic", "eip712"] }
